# VGCBooking

./: .gitignore  PUBBLICAZIONE.md  README.md  pyproject.toml
.github/workflows/: update-prices.yml
data/: events_2027.yaml  signups_template.csv  team.yaml
docs/: index.html
docs/data/: history.json  prices.json  prices.sample.json
src/vgcbooking/: __main__.py  config.py  geo.py  models.py  pipeline.py  ranking.py  registry.py  signups.py  snapshot.py  workbook.py
src/vgcbooking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vgcbooking/providers/: __init__.py  airbnb.py  base.py  booking_com.py  google_flights.py  links.py  mock.py
src/vgcbooking/scrapers/: airbnb.py  booking.py  flights.py  numbers.py
