[project]
name = "vgcbooking"
version = "0.1.0"
description = "Pianificazione trasferte team VGC — stagione 2027"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
vgcbooking = "vgcbooking.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
